# udacity-mlops-scoring-project

./: .gitignore  LICENSE  README.md  pyproject.toml
cfg/: practice.json  release.json
src/udacity/project/mlops/scoring/: __main__.py  apicalls.py  app.py  deployment.py  diagnostics.py  ingestion.py  reporting.py  scoring.py  training.py
src/udacity/project/mlops/scoring/utils/: __init__.py  argparse.py  config.py
